force-app/main/default/objects/Project_Assignment__c/Project_Assignment__c.object-meta.xml
<CustomObject>
    <description>Assignment between a user and project to track allocated capacity.</description>
    <label>Project Assignment</label>
    <nameField>
        <displayFormat>PA-{00000}</displayFormat>
        <label>Project Assignment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>