force-app/main/default/objects/Project_Assignment__c/fields/Allocated_Hours__c.field-meta.xml
<CustomField>
    <fullName>Allocated_Hours__c</fullName>
    <description>Total allocated hours for this assignment.</description>
    <label>Allocated Hours</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>