force-app/main/default/objects/Project_Assignment__c/fields/Billing_Rate_Per_Hour__c.field-meta.xml
<CustomField>
    <fullName>Billing_Rate_Per_Hour__c</fullName>
    <description>Billing rate per hour for this assignment.</description>
    <label>Billing Rate Per Hour</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>