force-app/main/default/objects/Project_Assignment__c/fields/Capacity_Max__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Max__c</fullName>
    <description>Maximum capacity value for this assignment.</description>
    <label>Capacity Max</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>