force-app/main/default/objects/Project_Assignment__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>End date of this assignment on the project.</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>