force-app/main/default/objects/Project_Assignment__c/fields/Logged_Hours__c.field-meta.xml
<CustomField>
    <fullName>Logged_Hours__c</fullName>
    <description>Sum of hours logged in related time entries.</description>
    <label>Logged Hours</label>
    <summarizedField>Time_Entry__c.Hours__c</summarizedField>
    <summaryForeignKey>Time_Entry__c.Project_Assignment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>