force-app/main/default/objects/Project_Assignment__c/fields/Max_Weekly_Hours__c.field-meta.xml
<CustomField>
    <fullName>Max_Weekly_Hours__c</fullName>
    <description>Maximum weekly hours allowed for this assignment.</description>
    <label>Max Weekly Hours</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>