force-app/main/default/objects/Project_Assignment__c/fields/Monthly_Budget_Amount__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Budget_Amount__c</fullName>
    <description>Monthly budget amount based on monthly max hours and rate.</description>
    <formula>Max_Monthly_Hours__c * Billing_Rate_Per_Hour__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Budget Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>