force-app/main/default/objects/Project_Assignment__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Start date of this assignment on the project.</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>