force-app/main/default/objects/Project_Assignment__c/fields/Total_Billed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Billed_Amount__c</fullName>
    <description>Total billed amount based on logged hours and rate.</description>
    <formula>Logged_Hours__c * Billing_Rate_Per_Hour__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Billed Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>