force-app/main/default/objects/Project_Assignment__c/fields/Weekly_Budget_Amount__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Budget_Amount__c</fullName>
    <description>Weekly budget amount based on weekly max hours and rate.</description>
    <formula>Max_Weekly_Hours__c * Billing_Rate_Per_Hour__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weekly Budget Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>